# interview

./: .gitignore
kline/: Cargo.toml  think.md
kline/data/: v3_kline_2021_06_23_00_00  v3_kline_2021_06_23_00_01  v3_kline_2021_06_23_00_02  v3_kline_2021_06_23_00_03  v3_kline_2021_06_23_00_04  v3_kline_2021_06_23_00_05  v3_kline_2021_06_23_00_06  v3_kline_2021_06_23_00_07  v3_kline_2021_06_23_00_08  v3_kline_2021_06_23_00_09  v3_kline_2021_06_23_00_10  v3_kline_2021_06_23_00_11  v3_kline_2021_06_23_00_12  v3_kline_2021_06_23_00_13  v3_kline_2021_06_23_00_14  v3_kline_2021_06_23_00_15  v3_kline_2021_06_23_00_16  v3_kline_2021_06_23_00_17  v3_kline_2021_06_23_00_18  v3_kline_2021_06_23_00_19  v3_kline_2021_06_23_00_20  v3_kline_2021_06_23_00_21  v3_kline_2021_06_23_00_22  v3_kline_2021_06_23_00_23  v3_kline_2021_06_23_00_24  v3_kline_2021_06_23_00_25  v3_kline_2021_06_23_00_26  v3_kline_2021_06_23_00_27  v3_kline_2021_06_23_00_28  v3_kline_2021_06_23_00_29  v3_kline_2021_06_23_00_30  v3_kline_2021_06_23_00_31  v3_kline_2021_06_23_00_32  v3_kline_2021_06_23_00_33  v3_kline_2021_06_23_00_34  v3_kline_2021_06_23_00_35  v3_kline_2021_06_23_00_36  v3_kline_2021_06_23_00_37  v3_kline_2021_06_23_00_38  v3_kline_2021_06_23_00_39  (+501 more)
kline/src/: file.rs  main.rs  trade.rs
musk/: Cargo.toml  think.md
musk/config/: config.toml
musk/data/: new.txt
musk/src/: btc.rs  main.rs  model.rs  prepare.rs  twitter.rs
